--- a/envs/zabbix-server/common.env
+++ b/envs/zabbix-server/common.env
@@ -1,7 +1,7 @@
-DB_SERVER_HOST=10.0.0.50
+DB_SERVER_HOST=172.31.49.18
 DB_SERVER_PORT=3306
 MYSQL_USER=zabbix
-MYSQL_PASSWORD=2Maratona@Zabbix
+MYSQL_PASSWORD=zabbix
 MYSQL_DATABASE=zabbix
 ZBX_TIMEOUT=30
 ZBX_LISTENIP=
